--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "secertnote-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+      "icon": "./assets/images/icon.png",
     "scheme": "secertnotemobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,10 +13,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "foregroundImage": "./assets/images/icon.png",
+        "backgroundColor": "#0B1020"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -29,15 +27,15 @@
       "expo-router",
       [
         "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
-        }
+         {
+           "image": "./assets/images/icon.png",
+           "imageWidth": 240,
+           "resizeMode": "contain",
+           "backgroundColor": "#0B1020",
+           "dark": {
+             "backgroundColor": "#0B1020"
+           }
+         }
       ]
     ],
     "experiments": {
