commit from server

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_BASE_URL=https://secret-note-backend.lugetech.com/api/secretnotes
+EXPO_PUBLIC_API_BASE_URL=https://pb.secretnotez.com/api/secretnotes
 EXPO_PUBLIC_AUTO_SAVE_DELAY_MS=1000
