--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.7",
-    "expo-clipboard": "^8.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.8",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.8",
