--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "favicon": "./assets/images/favicon.png",
+      "favicon": "./public/favicon.ico",
       "output": "static",
       "name": "Secret Notes",
       "shortName": "SecretNotes",
@@ -31,6 +31,13 @@
       "display": "standalone",
       "backgroundColor": "#0B1020",
       "lang": "en",
+      "icons": [
+        { "src": "/favicon.ico", "type": "image/x-icon", "sizes": "16x16 32x32" },
+        { "src": "/icon-192.png", "type": "image/png", "sizes": "192x192" },
+        { "src": "/icon-512.png", "type": "image/png", "sizes": "512x512" },
+        { "src": "/icon-192-maskable.png", "type": "image/png", "sizes": "192x192", "purpose": "maskable" },
+        { "src": "/icon-512-maskable.png", "type": "image/png", "sizes": "512x512", "purpose": "maskable" }
+      ],
       "meta": {
         "apple": {
           "mobileWebAppCapable": "yes",
