Rename Secret Notes to Secret Notez across app
This commit renames the application from "Secret Notes" to "Secret
Notez" consistently across all occurrences in the codebase,
including configuration files, UI text, and metadata.

The rename affects multiple areas:
* App metadata in app.json has been updated with the new name,
  including display name, short name, and description
* All static text references in JSX files have been replaced with
  the new branding
* SEO metadata components have been updated to reflect the new
  application name and descriptions
* Image save functionality now uses the new app name for album
  creation

The change was made to unify the application's branding and
improve its identity across different platforms and contexts.
This rename maintains consistency between the application's
internal naming and its public-facing identity.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Secret Notes",
+    "name": "Secret Notez",
     "slug": "secertnote-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -24,9 +24,9 @@
     "web": {
       "favicon": "./public/favicon.ico",
       "output": "static",
-      "name": "Secret Notes",
-      "shortName": "SecretNotes",
-      "description": "Instantly create notes by entering a title. Use short titles for public boards or complex ones for private, encrypted vaults. No signup required.",
+      "name": "Secret Notez",
+      "shortName": "SecretNotez",
+      "description": "Secret Notez: instantly open an encrypted note by entering a title. Short titles act like public boards; stronger titles create private vaults with realtime sync—no signup.",
       "themeColor": "#0B1020",
       "display": "standalone",
       "backgroundColor": "#0B1020",
